chore: Change mail to info@extrapopust.com

--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -348,7 +348,7 @@
             <a href="tel:+38979350737" aria-label="Контакт mail"><img
                     src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16"
                     height="16">079350737</a>
-            <a href="mailto:contact@extrapopust.com" aria-label="Контакт mail"><img
+            <a href="mailto:info@extrapopust.com" aria-label="Контакт mail"><img
                     src="{% static 'icons/envelope.svg' %}" alt="" class="image-icon top-icon filter-white" width="16"
                     height="16">info@extrapopust.com</a>
         </div>
