--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -4,7 +4,7 @@
     {% if not product %}
         <section id="header-banner">
             <div class="banner-inner-header-1" style="display: flex;align-items:center;justify-content:center ">
-                <a href="mailto:contact@extrapopust.com" class="banner-text">contact@extrapopust.com</a>
+                <a href="mailto:info@extrapopust.com" class="banner-text">info@extrapopust.com</a>
                 <a href="https://www.facebook.com/extrapopust.com" aria-label="Facebook"><img
                         src="{% static 'icons/facebook.svg' %}" class="image-icon filter-white" alt="" width="16"
                         height="16"></a>
