--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -382,8 +382,8 @@
                     <p style="padding:0px 10px 10px 10px;text-align:left;font-size:16px;">Доколку не сте задоволни од
                         производот можете да побарате рефундација или да го замените производот со некој друг што го
                         имаме на залиха моментално. Се што треба е да не контактирате на <a
-                                href="mailto:contact@extrapopust.com"
-                                style="display:inline-block; color:#00703d;font-weight:500;">contact@extrapopust.com</a>
+                                href="mailto:info@extrapopust.com"
+                                style="display:inline-block; color:#00703d;font-weight:500;">info@extrapopust.com</a>
                         и веднаш ќе добиете некој од нашите колеги кој ќе ви помогне да се реши проблемот.</p>
                 </div>
             </div>
