--- a/shop/templates/shop/policies/reklamacija.html
+++ b/shop/templates/shop/policies/reklamacija.html
@@ -8,7 +8,7 @@
             <p class="politika-point"><strong>1.2 Дали има некакви трошоци за рекламација?</strong></p>
             <p class="politika-description">Доколку откриеме дека рекламацијата е оправдана, купувачот нема дополнителни трошоци за испорака. Доколку приговорот е неоправдан, трошоците за испорака паѓаат на товар на купувачот.</p>
             <p class="politika-point"><strong>1.3 Која е постапката за рекламација?</strong></p>
-            <p class="politika-description">Кога ќе одлучите да рекламирате одреден производ, потребно е писмено да не известите преку е-пошта contact@extrapopust.com или во порака преку нашата Facebook страница на следниот линк: facebook.com/extrapopust.com</p>
+            <p class="politika-description">Кога ќе одлучите да рекламирате одреден производ, потребно е писмено да не известите преку е-пошта info@extrapopust.com или во порака преку нашата Facebook страница на следниот линк: facebook.com/extrapopust.com</p>
             <p class="politika-point"><strong>Потребни податоци за рекламација:</strong></p>
             <p class="politika-description politika-description-listed">
             <strong>1.</strong> Име и презиме на клиентот<br>
