--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -364,10 +364,10 @@
         </div>
         <hr class="horizontal-line">
         <div class="footer-social-icons">
-            <a href="https://www.facebook.com/extrapopust.com" aria-label="Facebook"><img
+            <a href="https://www.facebook.com/extrapopust" aria-label="Facebook"><img
                     src="{% static 'icons/facebook.svg' %}" alt="" class="image-icon filter-white" width="24"
                     height="24"></a>
-            <a href="https://www.instagram.com/extrapopust.com/" aria-label="Instagram"><img
+            <a href="https://www.instagram.com/extrapopust.mk" aria-label="Instagram"><img
                     src="{% static 'icons/instagram.svg' %}" alt="" class="image-icon filter-white" width="24"
                     height="24"></a>
         </div>
