--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -5,10 +5,10 @@
         <section id="header-banner">
             <div class="banner-inner-header-1" style="display: flex;align-items:center;justify-content:center ">
                 <a href="mailto:info@extrapopust.com" class="banner-text">info@extrapopust.com</a>
-                <a href="https://www.facebook.com/extrapopust.com" aria-label="Facebook"><img
+                <a href="https://www.facebook.com/extrapopust" aria-label="Facebook"><img
                         src="{% static 'icons/facebook.svg' %}" class="image-icon filter-white" alt="" width="16"
                         height="16"></a>
-                <a href="https://www.instagram.com/extrapopust.com" aria-label="Instagram"><img
+                <a href="https://www.instagram.com/extrapopust.mk" aria-label="Instagram"><img
                         src="{% static 'icons/instagram.svg' %}" class="image-icon filter-white" alt="" width="16"
                         height="16"></a>
             </div>
