--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -112,19 +112,14 @@
 {% include "shop/includes/header.html" %}
 <nav id="navigation" style="z-index:1000000000!important">
     <ul>
-        <li class="navigation-item"><a href="https://promotivno.com/" class="navigation-title">ПОЧЕТНА</a></li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/najprodavani/"
-                                       class="navigation-title">НАЈПРОДАВАНИ</a></li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/domakjinstvo/"
-                                       class="navigation-title">ДОМАЌИНСТВО</a></li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/gradina/" class="navigation-title">ГРАДИНА</a>
+        <li class="navigation-item">
+            <a href="https://promotivno.com/" class="navigation-title">ПОЧЕТНА</a>
         </li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/zdravje-i-ubavina/"
-                                       class="navigation-title">ЗДРАВЈЕ И УБАВИНА</a></li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/kujnski-aparati/"
-                                       class="navigation-title">КУЈНСКИ АПАРАТИ</a></li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/avtomobil/"
-                                       class="navigation-title">АВТОМОБИЛ</a></li>
+        {% for category in categories %}
+        <li class="navigation-item">
+            <a href="{% url category.slug %}" class="navigation-title">{{ category.name }}</a>
+        </li>
+        {% endfor %}
     </ul>
 </nav>
 <div class="page-container">
