--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -345,9 +345,9 @@
         </div>
         <div class="footer-item ">
             <h3>Контакт</h3>
-            <a href="tel:+38979350737" aria-label="Контакт mail"><img
-                    src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16"
-                    height="16">079350737</a>
+{#            <a href="tel:+38979350737" aria-label="Контакт mail"><img#}
+{#                    src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16"#}
+{#                    height="16">079350737</a>#}
             <a href="mailto:info@extrapopust.com" aria-label="Контакт mail"><img
                     src="{% static 'icons/envelope.svg' %}" alt="" class="image-icon top-icon filter-white" width="16"
                     height="16">info@extrapopust.com</a>
